# Node-IDE

./: .gitignore  LICENSE  NODE_IDE_BUILD_PLAN.md  NODE_IDE_BUILD_PLAN_v2_incremental.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: lifecycle-v1.md  protocol-v1.md
scripts/: generate-update-manifest.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  main.rs  state.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/migration/: mod.rs  registry.rs  v1_to_v2.rs  v2_to_v3.rs  v3_to_v4.rs
src-tauri/src/persistence/: backup.rs  mod.rs  project.rs
src-tauri/src/runtime/: edge.rs  envelope.rs  graph.rs  lifecycle.rs  mod.rs  node.rs  runner.rs  sdk.rs
src-tauri/src/runtime/builtin/: constant.rs  echo.rs  mod.rs
src-tauri/src/runtime/protocol/: mod.rs  presets.rs  resolve.rs
src-tauri/tests/: cli_integration.rs  migration_integration.rs
src/components/: Canvas.tsx  MessageStack.tsx  NodePalette.tsx  PropertyPanel.tsx  ResultPanel.tsx  UpdateDialog.tsx  WorkflowNode.tsx  WorkflowNode.types.ts
src/context/: NodesContext.tsx
src/hooks/: useAppState.ts  useLifecycleStream.ts  useMessageStack.ts
src/lib/: protocol.ts
src/types/: graph.ts
